2004-08-28 11:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Added calls to [GSClassSwapper 
	setIsInInterfaceBuilder:] to shut off the custom class -> real
	class morphing when testing.  Added implementation for
	method which changes the static value of the flag as well
	called setIsInInterfaceBuilder:.
	* GormDocument.m: Added calls in loadDocument: to
	[GSClassSwapper setIsInInterfaceBuilder:] to turn off custom
	class conversion while loading the .gorm document.
	* GormCustomView.m: Added implementation of a method 
	called _bestPossibleSuperClass to get the best substitute
	for the custom class specified when testing the interface.
	This allows the user to see a more accurate picture
	of what the gui will look like when it's done.
	
2004-08-25 22:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSWindow.m: Removed canBecomeKeyWindow
	method.  This was returning NO and preventing the method user
	from setting the font.
	
2004-08-23 22:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassInspector.m: Corrected bug introduced a few 
	days ago.  The actions tag in the class inspector wasn't 
	functioning correctly.
	
2004-08-23 15:06 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.[hm]:
	* Palettes/1Windows/GormNSWindow.[hm]: Changed the name
	of the styleMask method to _styleMask.  Since this serves
	as a "proxy" of the original value so that it can be edited
	without effecting the window, it shouldn't have the same
	name as the method in the parent class anyway.  The new 
	window decoration code was calling this method. 
	* Palettes/1Windows/main.m: [GormWindowAttributesInspector
	_setValuesFromControl:] and [GormWindowAttributesInspector
	_getValuesFromObject] changed to use new method name.
	
2004-08-21 00:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.m:
	* Palettes/1Windows/GormNSWindow.m: Added code to prevent